SERVER-6244 behave better when non-Unicode font used with shell

If the Windows WriteConsoleW() API fails because the console is set
to a non-Unicode font, display a (hopefully helpful) error message
once and then display the text anyway.  ASCII parts will display
fine, non-ASCII parts will display with UTF-8 bytes interpreted as
if they were OEM characters.